objects/Discovery_Question_Product__c.object
<CustomObject>
    <description>Junction object to associate a Discovery Question with their relevant Product.</description>
    <fields>
        <fullName>Active_Flag_for_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Flag for Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_Need_Id__c</fullName>
        <formula>CASESAFEID(Product__r.Solution__r.Question_Category__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Need Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Need__c</fullName>
        <formula>Product__r.Solution__r.Question_Category__r.Name</formula>
        <label>Dealership Need</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Discovery Question Products</relationshipLabel>
        <relationshipName>Discovery_Question_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Discovery Question Products</relationshipLabel>
        <relationshipName>Discovery_Question_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <formula>Product__r.Solution__r.Name</formula>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <label>Discovery Question Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Product__c</columns>
        <columns>Solution__c</columns>
        <columns>Dealership_Need__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PQ-{00000000}</displayFormat>
        <label>ProdQuest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Question Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dealership_Need_Mismatch</fullName>
        <active>false</active>
        <description>Ensures that a user does not select a Product that does not belong to the Dealership Need Hierarchy of the Dealership Need specified on the Question</description>
        <errorConditionFormula>Dealership_Need__c &lt;&gt; 00N40000002Orh1.00N40000002Orgz.Name &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>The Product selected does not belong to the Dealership Need Hierarchy of the Dealership Need specified on the Question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IMP_NoRelatedDiscQuesDealershipNeedRec</fullName>
        <active>true</active>
        <description>allow this junction object records to be created only for the questions which does not have its child Discovery Question Dealership need records</description>
        <errorConditionFormula>Question__r.Count_Of_Question_Dealership_Needs__c &gt; 0</errorConditionFormula>
        <errorMessage>The Question selected must have no Discovery Question Dealership Need records related to it.</errorMessage>
    </validationRules>
</CustomObject>